Pass --enable-native-access=ALL-UNNAMED which is required for JFX 24+
Thanks Ron